--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/image/1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>napat</title>
   </head>
   <body>
+    <script type="module" src="/src/main.tsx"></script>ß
     <div id="root"><h1>Apologies for the inconvenience. We will fix it by the 13th</h1></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
