--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>napat</title>
   </head>
   <body>
-    <script type="module" src="/src/main.tsx"></script>ß
-    <div id="root"><h1>Apologies for the inconvenience. We will fix it by the 13th</h1></div>
+    <div id="root"></div>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
